--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.81.0",
     "body-parser": "^1.20.2",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
     "firebase": "^10.14.1",
+    "helmet": "^7.1.0",
     "stripe": "^14.0.0"
   },
   "devDependencies": {
